--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.1.0",
+    "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
