--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.0"
+    "tailwindcss": "^4.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
