--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.1.0",
     "axios": "^1.9.0",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
