--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.1.0",
     "axios": "^1.9.0",
+    "dagre": "^0.8.5",
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "pdf-lib": "^1.17.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/dagre": "^0.7.52",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
