--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,14 @@
 server {
     listen 80;
-    server_name _;  # acepta cualquier dominio o IP
+    server_name _;
 
     # Servir el frontend (React/Vite)
     location / {
         proxy_pass http://frontend-app:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         try_files $uri $uri/ /index.html;
     }
 
